third_party/move/move-compiler-v2/tests/checking/specs/expressions_inference_err.exp

Diagnostics:
error: unable to infer instantiation of type `_` (consider providing type arguments or annotating the type)
  ┌─ tests/checking/specs/expressions_inference_err.move:6:16
  │
6 │       let f = |x|x; // Incomplete types.
  │                ^
